terraform/main.tf
provider "aws" {
  region = "eu-central-1"
}

resource "aws_security_group" "devops_sg" {
  name = "devops-sg"

  # SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP (nginx)
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # ArgoCD UI (port-forward)
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound (all)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "devops" {
  ami           = "ami-09fc5668766215f32"
  instance_type = "t3.small"
  security_groups = [aws_security_group.devops_sg.name]

  key_name = "from_ubuntu"

  tags = {
    Name = "devops-argocd"
  }
}
